@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + uphp(int hp_pluss): void
    + bullet_activated(): void
    + reset_shootNum(): void
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + aftercrash(List<Prop> MyProp): void
}

class EliteEnemy{
    -shootNum: int
    -power: int
    -direction: int

    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot():List<BaseBullet>
    + aftercrash(List<Prop> MyProp): void
}

class ElitePlusEnemy{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot():List<BaseBullet>
    + aftercrash(List<Prop> MyProp): void
}

class BossEnemy{
    - propNum: int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot():List<BaseBullet>
    + aftercrash(List<Prop> MyProp): void
}

abstract class enemyAircraft{
    + enemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + aftercrash(List<Prop> MyProp): void
}

AbstractAircraft <|-- enemyAircraft

enemyAircraft <|-- ElitePlusEnemy
enemyAircraft <|-- BossEnemy
enemyAircraft <|-- EliteEnemy
enemyAircraft <|-- MobEnemy
abstract class BaseBullet
{
    - power:int

    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class Prop {
    + Prop(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + {abstract}aftercrash(HeroAircraft heroAircraft): void
}

class Prop_blood{
    - blood: int

    + Prop_blood(int locationX, int locationY, int X, int Y, int blood)
    + afercrash(HeroAircraft heroAircraft):void
}

class Prop_bomb{
    + Prop_bomb(int locationX, int locationY, int X, int Y)
    + afercrash(HeroAircraft heroAircraft)): void
}

class Prop_bullet{
    + Prop_bullet(int locationX, int locationY, int X, int Y)
    + aftercrash(HeroAircraft heroAircraft): void
}

class Prop_bulletPlus{
    + prop_bulletPlus(int locationX, int locationY, int X, int Y)
    + aftercrash(HeroAircraft heroAircraft): void
}

Prop <|-- Prop_blood
Prop <|-- Prop_bomb
Prop <|-- Prop_bullet
Prop <|-- Prop_bulletPlus


AbstractFlyingObject <|-- Prop
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

@enduml